// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typing sentence One sentence renders properly one sentence 1`] = `
<div>
  <h1>
    1234567890
  </h1>
  
</div>
`;

exports[`Typing sentence Three sentences - infinity mode renders properly three sentences 1`] = `
<div>
  <h1>
    1234567890
  </h1>
  
</div>
`;

exports[`Typing sentence Three sentences - infinity mode renders properly three sentences 2`] = `
<div>
  <h1>
    1234567890
  </h1>
  <h1>
    qwerty
  </h1>
</div>
`;

exports[`Typing sentence Three sentences - infinity mode renders properly three sentences 3`] = `
<div>
  <h1>
    1234567890
  </h1>
  <h1>
    dfksjn32
  </h1>
</div>
`;

exports[`Typing sentence Three sentences - infinity mode renders properly three sentences 4`] = `
<div>
  <h1>
    1234567890
  </h1>
  <h1>
    qwerty
  </h1>
</div>
`;

exports[`Typing sentence Three sentences - infinity mode renders properly three sentences 5`] = `
<div>
  <h1>
    1234567890
  </h1>
  <h1>
    dfksjn32
  </h1>
</div>
`;

exports[`Typing sentence Three sentences renders properly three sentences 1`] = `
<div>
  <h1>
    1234567890
  </h1>
  
</div>
`;

exports[`Typing sentence Three sentences renders properly three sentences 2`] = `
<div>
  <h1>
    1234567890
  </h1>
  <h1>
    qwerty
  </h1>
</div>
`;

exports[`Typing sentence Three sentences renders properly three sentences 3`] = `
<div>
  <h1>
    1234567890
  </h1>
  <h1>
    dfksjn32
  </h1>
</div>
`;

exports[`Typing sentence Two sentences renders properly two sentences 1`] = `
<div>
  <h1>
    1234567890
  </h1>
  
</div>
`;

exports[`Typing sentence Two sentences renders properly two sentences 2`] = `
<div>
  <h1>
    1234567890
  </h1>
  <h1>
    qwerty
  </h1>
</div>
`;
